force-app/main/default/objects/Interaction__c/Interaction__c.object-meta.xml
<CustomObject>
    <description>This object will be used to capture the Interaction with various Account and Contact coming through various different channels in salesforce.</description>
    <label>Interaction</label>
    <nameField>
        <displayFormat>INT-{00000}</displayFormat>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>