force-app/main/default/objects/Interaction__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(Contact__r.IsPersonAccount, Contact__r.FirstName &amp; &#39; &#39;&amp; Contact__r.LastName ,Contact__r.Account.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>