force-app/main/default/objects/Interaction__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <description>Which Advisor is conducting consultation</description>
    <inlineHelpText>Which Advisor is conducting consultation</inlineHelpText>
    <label>Advisor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vikas Jain</fullName>
            </value>
            <value>
                <fullName>Sandi Koitsis-Zigomanis</fullName>
            </value>
            <value>
                <fullName>Jason Li</fullName>
            </value>
            <value>
                <fullName>Karen Keskull</fullName>
            </value>
            <value>
                <fullName>Chris Rickett</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>