force-app/main/default/objects/Interaction__c/fields/Advisor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Comments__c</fullName>
    <description>This field is to capture the additional information provided by Advisor while approving or rejecting any Consultation Meeting request.</description>
    <inlineHelpText>This field is to capture the additional information provided by Advisor while approving or rejecting any Consultation Meeting request.</inlineHelpText>
    <label>Advisor Comments</label>
    <type>TextArea</type>
</CustomField>