force-app/main/default/objects/Interaction__c/fields/Advisor_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which Advisor is conducting consultation</description>
    <inlineHelpText>Which Advisor is conducting consultation</inlineHelpText>
    <label>Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_Interaction</relationshipName>
    <type>Lookup</type>
</CustomField>