force-app/main/default/objects/Interaction__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age</description>
    <inlineHelpText>Age</inlineHelpText>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 18</fullName>
            </value>
            <value>
                <fullName>19 to 29</fullName>
            </value>
            <value>
                <fullName>30 to 39</fullName>
            </value>
            <value>
                <fullName>40 to 49</fullName>
            </value>
            <value>
                <fullName>&gt; 50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>