force-app/main/default/objects/Interaction__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <description>This field is used to capture any special instruction from Advisor on meeting confirmation.</description>
    <inlineHelpText>This field is used to capture any special instruction from Advisor on meeting confirmation.</inlineHelpText>
    <label>Approval Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>