force-app/main/default/objects/Interaction__c/fields/Are_you_interested_in_Export__c.field-meta.xml
<CustomField>
    <fullName>Are_you_interested_in_Export__c</fullName>
    <description>Are you interested in exporting products or services or resources to help</description>
    <inlineHelpText>Are you interested in exporting products or services or resources to help</inlineHelpText>
    <label>Are you interested in Export?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Do_You_Export__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>