force-app/main/default/objects/Interaction__c/fields/Business_Idea__c.field-meta.xml
<CustomField>
    <fullName>Business_Idea__c</fullName>
    <description>What is the basic premise of the Business</description>
    <inlineHelpText>What is the basic premise of the Business</inlineHelpText>
    <label>Business Idea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>