force-app/main/default/objects/Interaction__c/fields/Business_Registration__c.field-meta.xml
<CustomField>
    <fullName>Business_Registration__c</fullName>
    <description>Legal Structure of Business</description>
    <inlineHelpText>Legal Structure of Business</inlineHelpText>
    <label>Business Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>