force-app/main/default/objects/Interaction__c/fields/Business_Status__c.field-meta.xml
<CustomField>
    <fullName>Business_Status__c</fullName>
    <description>Business Status</description>
    <inlineHelpText>Business Status</inlineHelpText>
    <label>Business Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
                <default>true</default>
                <label>Existing Client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>