force-app/main/default/objects/Interaction__c/fields/Challenge_s_Faced_by_Business__c.field-meta.xml
<CustomField>
    <fullName>Challenge_s_Faced_by_Business__c</fullName>
    <label>Challenge(s) Faced by Business</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Border Crossing</fullName>
            </value>
            <value>
                <fullName>Building Permit</fullName>
            </value>
            <value>
                <fullName>Cost of commercial space</fullName>
            </value>
            <value>
                <fullName>Cost of living</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Declining Market</fullName>
            </value>
            <value>
                <fullName>Delays</fullName>
            </value>
            <value>
                <fullName>Export Market Access / Trade Tariffs</fullName>
            </value>
            <value>
                <fullName>Federal Regulation</fullName>
            </value>
            <value>
                <fullName>Federal Regulations</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
            <value>
                <fullName>Foreign Competition</fullName>
            </value>
            <value>
                <fullName>Foreign Regulations</fullName>
            </value>
            <value>
                <fullName>Hydro Reliability</fullName>
            </value>
            <value>
                <fullName>Increasing Input Cost</fullName>
            </value>
            <value>
                <fullName>Increasing Input Costs</fullName>
            </value>
            <value>
                <fullName>Lack of Government Assistance Program</fullName>
            </value>
            <value>
                <fullName>Lack of Government Assistance Programs</fullName>
            </value>
            <value>
                <fullName>Lack of specialized facilities</fullName>
            </value>
            <value>
                <fullName>Market access</fullName>
            </value>
            <value>
                <fullName>Municipal Regulation</fullName>
            </value>
            <value>
                <fullName>Municipal Regulations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Provincial Regulation</fullName>
            </value>
            <value>
                <fullName>Provincial Regulations</fullName>
            </value>
            <value>
                <fullName>Skilled Labour Regulations</fullName>
            </value>
            <value>
                <fullName>Skilled Labour Supply</fullName>
            </value>
            <value>
                <fullName>Suppliers</fullName>
            </value>
            <value>
                <fullName>Taxation Problems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>