force-app/main/default/objects/Interaction__c/fields/Current_Year_Employment_Full_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Employment_Full_Time__c</fullName>
    <description>The total number of full time employees for current year.</description>
    <inlineHelpText>The total number of full time employees for current year.</inlineHelpText>
    <label>Current Year Employment-Full-Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>