force-app/main/default/objects/Interaction__c/fields/Current_Year_Employment_Part_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Employment_Part_Time__c</fullName>
    <description>The total number of part time employees for Current year.</description>
    <inlineHelpText>The total number of part time employees for Current year.</inlineHelpText>
    <label>Current Year Employment – Part Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>