force-app/main/default/objects/Interaction__c/fields/Current_Year_Employment_Total__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Employment_Total__c</fullName>
    <description>The total number of full time and part time employees. (Employment Full time  + Employment Part Time for Current year.</description>
    <formula>Current_Year_Employment_Full_Time__c + Current_Year_Employment_Part_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year Employment - Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>