force-app/main/default/objects/Interaction__c/fields/Date_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Contact__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date the interaction took place</description>
    <inlineHelpText>The date the interaction took place</inlineHelpText>
    <label>Date of Contact</label>
    <type>Date</type>
</CustomField>