force-app/main/default/objects/Interaction__c/fields/Describe_Request__c.field-meta.xml
<CustomField>
    <fullName>Describe_Request__c</fullName>
    <inlineHelpText>If Yes, please describe your Request and we will contact you</inlineHelpText>
    <label>Describe Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>