force-app/main/default/objects/Interaction__c/fields/Do_You_Export__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Export__c</fullName>
    <description>Does the Company Export Products or Services</description>
    <inlineHelpText>Does the Company Export Products or Services</inlineHelpText>
    <label>Do You Export?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>