force-app/main/default/objects/Interaction__c/fields/EDC_Report_description__c.field-meta.xml
<CustomField>
    <fullName>EDC_Report_description__c</fullName>
    <description>This is a free form text field where the user can enter any text pertaining to the interaction included in the weekly report</description>
    <inlineHelpText>This is a free form text field where the user can enter any text pertaining to the interaction included in the weekly report</inlineHelpText>
    <label>EDC  Report description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>