force-app/main/default/objects/Interaction__c/fields/Email_Signatory_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Signatory_Name__c</fullName>
    <description>This field will be hidden from page layout and used on Email Template under signatory to notify end client</description>
    <formula>IF(OR(Interaction_Owner__r.Id =&#39;0051N0000078NiC&#39;,Interaction_Owner__r.Id = &#39;005o0000001eWfG&#39;),&#39;Paul Pirri&#39;+BR()+&#39;Acting Manager, Entrepreneurship Services&#39;+BR()+&#39;City of Toronto&#39;, Interaction_Owner__r.FirstName+&#39; &#39;+Interaction_Owner__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will be hidden from page layout and used on Email Template under signatory to notify end client</inlineHelpText>
    <label>Email Signatory Name</label>
    <type>Text</type>
</CustomField>