force-app/main/default/objects/Interaction__c/fields/Employment_Change_In_Next_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Employment_Change_In_Next_12_Months__c</fullName>
    <description>The increase or decrease of employees in future. (Tied to Empl. Incr. or Decr. Next 12 Months)</description>
    <inlineHelpText>The increase or decrease.of employees in future (Tied to Empl. Incr. or Decr. Next 12 Months)</inlineHelpText>
    <label>Employment Change In Next 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>