force-app/main/default/objects/Interaction__c/fields/Employment_Information_Source__c.field-meta.xml
<CustomField>
    <fullName>Employment_Information_Source__c</fullName>
    <description>The Source of the Employment information</description>
    <inlineHelpText>The Source of the Employment information</inlineHelpText>
    <label>Employment Information Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct from Client</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>Toronto Board of Trade</fullName>
            </value>
            <value>
                <fullName>Other Directories</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>