force-app/main/default/objects/Interaction__c/fields/Enterprise_Toronto_Location__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Toronto_Location__c</fullName>
    <description>Which Enterprise Toronto location is requested</description>
    <inlineHelpText>Which Enterprise Toronto location is requested</inlineHelpText>
    <label>Enterprise Toronto Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>City Hall</fullName>
            </value>
            <value>
                <fullName>North York</fullName>
            </value>
            <value>
                <fullName>Scarborough</fullName>
            </value>
            <value>
                <fullName>Online Training</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>