force-app/main/default/objects/Interaction__c/fields/ET_Client_Status__c.field-meta.xml
<CustomField>
    <fullName>ET_Client_Status__c</fullName>
    <description>Client Status</description>
    <inlineHelpText>Client Status</inlineHelpText>
    <label>ET Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>