force-app/main/default/objects/Interaction__c/fields/Expected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start_Date__c</fullName>
    <description>Date Business is expected to start</description>
    <inlineHelpText>Date Business is expected to start</inlineHelpText>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>