force-app/main/default/objects/Interaction__c/fields/Export_Countries_Regions_m__c.field-meta.xml
<CustomField>
    <fullName>Export_Countries_Regions_m__c</fullName>
    <description>The list of countries/regions where the Company or Organization currently export their goods and services.</description>
    <inlineHelpText>The list of countries/regions where the Company or Organization currently export their goods and services.</inlineHelpText>
    <label>Export Countries/Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Do_You_Export__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Rest of Asia</fullName>
            </value>
            <value>
                <fullName>Oceania</fullName>
            </value>
            <value>
                <fullName>Afghanistan</fullName>
                <isActive>false</isActive>
                <label>Afghanistan</label>
            </value>
            <value>
                <fullName>Aland Islands</fullName>
                <isActive>false</isActive>
                <label>Aland Islands</label>
            </value>
            <value>
                <fullName>Albania</fullName>
                <isActive>false</isActive>
                <label>Albania</label>
            </value>
            <value>
                <fullName>Algeria</fullName>
                <isActive>false</isActive>
                <label>Algeria</label>
            </value>
            <value>
                <fullName>Andorra</fullName>
                <isActive>false</isActive>
                <label>Andorra</label>
            </value>
            <value>
                <fullName>Angola</fullName>
                <isActive>false</isActive>
                <label>Angola</label>
            </value>
            <value>
                <fullName>Anguilla</fullName>
                <isActive>false</isActive>
                <label>Anguilla</label>
            </value>
            <value>
                <fullName>Antarctica</fullName>
                <isActive>false</isActive>
                <label>Antarctica</label>
            </value>
            <value>
                <fullName>Antigua and Barbuda</fullName>
                <isActive>false</isActive>
                <label>Antigua and Barbuda</label>
            </value>
            <value>
                <fullName>Argentina</fullName>
                <isActive>false</isActive>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>Armenia</fullName>
                <isActive>false</isActive>
                <label>Armenia</label>
            </value>
            <value>
                <fullName>Aruba</fullName>
                <isActive>false</isActive>
                <label>Aruba</label>
            </value>
            <value>
                <fullName>Australia</fullName>
                <isActive>false</isActive>
                <label>Australia</label>
            </value>
            <value>
                <fullName>Austria</fullName>
                <isActive>false</isActive>
                <label>Austria</label>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
                <isActive>false</isActive>
                <label>Azerbaijan</label>
            </value>
            <value>
                <fullName>Bahamas</fullName>
                <isActive>false</isActive>
                <label>Bahamas</label>
            </value>
            <value>
                <fullName>Bahrain</fullName>
                <isActive>false</isActive>
                <label>Bahrain</label>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
                <isActive>false</isActive>
                <label>Bangladesh</label>
            </value>
            <value>
                <fullName>Barbados</fullName>
                <isActive>false</isActive>
                <label>Barbados</label>
            </value>
            <value>
                <fullName>Belarus</fullName>
                <isActive>false</isActive>
                <label>Belarus</label>
            </value>
            <value>
                <fullName>Belgium</fullName>
                <isActive>false</isActive>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>Belize</fullName>
                <isActive>false</isActive>
                <label>Belize</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>